--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI-Powered News Aggregator</title>
-    <link rel="stylesheet" href="../News/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -23,6 +23,6 @@
     <footer>
         <h5>&copy; 2024 AI News Aggregator</h5>
     </footer>
-    <script src="../News/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
